--- a/src/app/list-tasks/list-tasks.component.html
+++ b/src/app/list-tasks/list-tasks.component.html
@@ -1,31 +1,52 @@
 <section>
     <header>
-        <h1>Lista de Taareas</h1>
+        <h1>Lista de Tareas</h1>
     </header>
-    <nav>
+    <nav class="filter-nav flex-wrap flex">
         <label for="filter">Filtrar por estado:</label>
-        <section>
-            <button>Todos</button>
-            <button>Pendientes</button>
-            <button>Completadas</button>
+        <section class="filter-actions flex">
+            <app-button type="secondary">Todos</app-button>
+            <app-button type="notification">Pendientes</app-button>
+            <app-button>Completadas</app-button>
         </section>
     </nav>
     <main>
-        <section class="task" *ngFor="let task of tasks">
-            <h2>{{ task.name }}</h2>
-            <h3>{{task.limitDate | date: 'dd/MM/yyyy'}}</h3>
-            <p>Estado: {{ task.status }}</p>
-            <ul>
-                <li *ngFor="let person of task.assignedTo">
-                    <h3>{{ person.name }}</h3>
-                    <p>Edad: {{ person.age }}</p>
-                    <ul>
-                        <li *ngFor="let skill of person.skills">{{ skill }}</li>
-                    </ul>
-                </li>
-            </ul>
-            <button>Marcar como completada</button>
+        <section class="flex flex-wrap">
+            <section *ngFor="let task of tasks; index as indexTask" class="task flex" [ngClass]="{
+                    'pending': !task.status, 
+                    'completed': task.status
+                }">
+                <aside class="flex justify-center">
+                    {{indexTask + 1}}.
+                </aside>
+                <section class="task-content">
+                    <header class="flex align-center justify-between">
+                        <h2>{{ task.name }}</h2>
+                        <p>-</p>
+                        <h3>{{task.limitDate | date: 'dd/MM/yyyy'}}</h3>
+                    </header>
+                    <section class="content">
+                        <h2>Personas Asociadas:</h2>
+                        <section class="people-assigned" *ngFor="let person of task.assignedTo">
+                            <h3 class="no-margin">{{ person.name }} ({{person.age}})</h3>
+                            <div class="flex align-center flex-wrap">
+                                <h3>Habilidades:</h3>
+                                <!-- hacer un pipe para separar -->
+                                <p class="no-margin" *ngFor="let skill of person.skills">{{ skill }}</p>
+                            </div>
+                        </section>
+                    </section>
+                    <!-- siempre misma altura con el resto -->
+                    <footer>
+                        <ng-container *ngIf="!task.status">
+                                <app-button>Completar</app-button>
+                        </ng-container>
+                    </footer>
+                </section>
+            </section>
         </section>
-        <button routerLink="/new-task">Crear nueva tarea</button>
     </main>
+    <footer class="flex justify-center">
+        <app-button routerLink="/new-task" type="secondary">Crear Tarea</app-button>
+    </footer>
 </section>
