feat: new task design improve

--- a/src/app/list-tasks/list-tasks.component.html
+++ b/src/app/list-tasks/list-tasks.component.html
@@ -5,8 +5,8 @@
     <nav class="filter-nav flex-wrap flex">
         <label for="filter">Filtrar por estado:</label>
         <section class="filter-actions flex">
-            <app-button type="secondary">Todos</app-button>
-            <app-button type="notification">Pendientes</app-button>
+            <app-button mode="secondary">Todos</app-button>
+            <app-button mode="notification">Pendientes</app-button>
             <app-button>Completadas</app-button>
         </section>
     </nav>
@@ -47,6 +47,6 @@
         </section>
     </main>
     <footer class="flex justify-center">
-        <app-button routerLink="/new-task" type="secondary">Crear Tarea</app-button>
+        <app-button routerLink="/new-task" mode="secondary">Crear Tarea</app-button>
     </footer>
 </section>
